--- a/slides.html
+++ b/slides.html
@@ -287,8 +287,7 @@
         </div>
 
         <!-- CHANGED: Continue button now goes to valentine-question.html -->
-        <a href="valentine-question.html" class="continue-btn" style="animation-delay: 9.3s;">Continue 💗</a>
-    </div>
+        <button onclick="window.location.href='valentine-question.html'" class="continue-btn" style="animation-delay: 9.3s;">Continue 💗</button>
 
     <script>
         // Generate floating hearts
