--- a/finale.html
+++ b/finale.html
@@ -195,7 +195,7 @@
     
     <div class="content">
         <div class="main-text">
-            <span class="typewriter" id="typewriter">I love you, Neksha &#10084;&#65039; </span>
+            <span class="typewriter" id="typewriter">I love you, Neksha </span> &#10084;&#65039;
         </div>
         <p class="subtext">Happy Valentine's Day.</p>
         <button class="play-again-btn" onclick="window.location.href='home.html'">Play Again 🔄</button>
