--- a/finale.html
+++ b/finale.html
@@ -195,7 +195,7 @@
     
     <div class="content">
         <div class="main-text">
-            <span class="typewriter" id="typewriter" style="display: inline-block; padding-right: 15px; overflow: visible;">I love you, Neksha &#10084;&#65039; </span>
+            <span class="typewriter" id="typewriter">I love you, Neksha &#10084;&#65039; </span>
         </div>
         <p class="subtext">Happy Valentine's Day.</p>
         <button class="play-again-btn" onclick="window.location.href='home.html'">Play Again 🔄</button>
@@ -317,6 +317,12 @@
             });
         });
     });
+    .typewriter {
+    overflow: visible !important;
+    display: inline-block !important;
+    padding-right: 15px !important;
+    white-space: nowrap !important;
+}
 </script>
 </body>
 </html>
