--- a/finale.html
+++ b/finale.html
@@ -323,6 +323,15 @@
     padding-right: 15px !important;
     white-space: nowrap !important;
 }
+    .typewriter {
+    opacity: 0;
+    animation: fadeIn 2s ease-out 1s forwards;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; transform: translateY(10px); }
+    to { opacity: 1; transform: translateY(0); }
+}
 </script>
 </body>
 </html>
