--- a/finale.html
+++ b/finale.html
@@ -346,6 +346,30 @@
 .fade-in-text {
     text-shadow: 0 0 20px rgba(255, 107, 157, 0.3);
 }
+    #typewriter {
+    opacity: 0 !important;
+    transform: translateY(20px) !important;
+    animation: textAppear 3s ease-out 1.5s forwards !important;
+    display: inline-block !important;
+    padding-right: 15px !important;
+    white-space: nowrap !important;
+    overflow: visible !important;
+}
+
+@keyframes textAppear {
+    0% {
+        opacity: 0;
+        transform: translateY(25px);
+    }
+    70% {
+        opacity: 0.9;
+        transform: translateY(-3px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 </script>
 </body>
 </html>
