--- a/finale.html
+++ b/finale.html
@@ -198,7 +198,7 @@
             <span class="fade-in-text" id="typewriter">I love you, Neksha &#10084;&#65039; </span>
         </div>
         <p class="subtext">Happy Valentine's Day.</p>
-        <button class="play-again-btn" onclick="window.location.href='home.html'">Play Again 🔄</button>
+        <button class="play-again-btn" onclick="window.location.href='index.html'">Play Again 🔄</button>
     </div>
 
     <script>
