--- a/finale.html
+++ b/finale.html
@@ -198,9 +198,29 @@
             <span class="fade-in-text" id="typewriter">I love you, Neksha &#10084;&#65039; </span>
         </div>
         <p class="subtext">Happy Valentine's Day.</p>
-        <button class="play-again-btn" onclick="window.location.href='index.html'">Play Again 🔄</button>
-    </div>
+        <button class="play-again-btn" onclick="goHome()">Play Again</button>
 
+<script>
+function goHome() {
+    // Try multiple options
+    const urls = [
+        'index.html',
+        './index.html',
+        '/neksha-valentine/index.html',
+        'https://chillguy786.github.io/neksha-valentine/index.html',
+        'slides.html'  // Fallback
+    ];
+    
+    for (let url of urls) {
+        try {
+            window.location.href = url;
+            return;
+        } catch (e) {
+            continue;
+        }
+    }
+}
+</script>
     <script>
         // Generate falling hearts (heart rain)
         function createFallingHeart() {
