--- a/finale.html
+++ b/finale.html
@@ -198,29 +198,7 @@
             <span class="fade-in-text" id="typewriter">I love you, Neksha &#10084;&#65039; </span>
         </div>
         <p class="subtext">Happy Valentine's Day.</p>
-        <button class="play-again-btn" onclick="goHome()">Play Again</button>
-
-<script>
-function goHome() {
-    // Try multiple options
-    const urls = [
-        'index.html',
-        './index.html',
-        '/neksha-valentine/index.html',
-        'https://chillguy786.github.io/neksha-valentine/index.html',
-        'slides.html'  // Fallback
-    ];
-    
-    for (let url of urls) {
-        try {
-            window.location.href = url;
-            return;
-        } catch (e) {
-            continue;
-        }
-    }
-}
-</script>
+        <button class="play-again-btn"onc=window.loaction.href='https://chillguy786.github.io/neksha-valentine/index.html'">Play Again</button>
     <script>
         // Generate falling hearts (heart rain)
         function createFallingHeart() {
