--- a/finale.html
+++ b/finale.html
@@ -198,15 +198,7 @@
             <span class="fade-in-text" id="typewriter">I love you, Neksha &#10084;&#65039; </span>
         </div>
         <p class="subtext">Happy Valentine's Day.</p>
-        <button class="play-again-btn" id="playAgainBtn">Play Again</button>
-
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-    document.getElementById('playAgainBtn').addEventListener('click', function() {
-        window.location.href = 'https://chillguy786.github.io/neksha-valentine/index.html';
-    });
-});
-</script>
+       <button class="play-again-btn" onclick="window.open('index.html', '_self')">Play Again</button>
         <script>
         // Generate falling hearts (heart rain)
         function createFallingHeart() {
