--- a/valentine-question.html
+++ b/valentine-question.html
@@ -253,6 +253,11 @@
             e.preventDefault();
             moveButton();
         });
+        .no-button:hover {
+    transform: translateY(-3px) !important;
+    box-shadow: 0 6px 20px rgba(255, 180, 71, 0.4) !important;
+    background: linear-gradient(135deg, #ffb347 0%, #ff8a00 100%) !important;
+}
     </script>
 </body>
 </html>
